--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
  <h1>Coursera getting started.</h1>
- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates beatae sit iusto dignissimos sunt quibusdam, velit natus fugit qui nemo!</p>
+<p>Test</p>
 </body>
 </html>
