--- a/index.html
+++ b/index.html
@@ -3,11 +3,26 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text&family=Montserrat:wght@300&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="./css/style.css">
  <title>Coursera test page</title>
 </head>
 <body>
- <h1>Coursera getting started.</h1>
-<p>Test</p>
+ <div class="container">
+  <h1>Our menu</h1>
+ <section class="section">
+  <h2 class="section-title chicken">Chicken</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum consequatur vel repellat rem necessitatibus explicabo a molestias alias voluptates incidunt obcaecati optio commodi, nesciunt, magnam facere dignissimos? Delectus et, fugiat, eaque laborum hic pariatur nesciunt officiis expedita deserunt sunt magni.</p>
+ </section>
+ <section class="section">
+  <h2 class="section-title  beef">Beef</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum consequatur vel repellat rem necessitatibus explicabo a molestias alias voluptates incidunt obcaecati optio commodi, nesciunt, magnam facere dignissimos? Delectus et, fugiat, eaque laborum hic pariatur nesciunt officiis expedita deserunt sunt magni.</p>
+ </section>
+ <section class="section third">
+  <h2 class="section-title sushi">Sushi</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum consequatur vel repellat rem necessitatibus explicabo a molestias alias voluptates incidunt obcaecati optio commodi, nesciunt, magnam facere dignissimos? Delectus et, fugiat, eaque laborum hic pariatur nesciunt officiis expedita deserunt sunt magni.</p>
+ </section>
+</div>
 </body>
 </html>
