--- a/week2/index.html
+++ b/week2/index.html
@@ -5,7 +5,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text&family=Montserrat:wght@300&display=swap" rel="stylesheet">
- <link rel="stylesheet" href="/css/style.css">
+ <link rel="stylesheet" href="./css/style.css">
  <title>Coursera test page</title>
 </head>
 <body>
